--- a/thesis_tex/chap3.tex
+++ b/thesis_tex/chap3.tex
@@ -108,6 +108,7 @@ Delay-and-Predict config:
 	\begin{subfigure}[b]{0.32\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Equalized_RTF_L_div_M_minus_1}
+	    \subcaption{test} \label{subfig:test_subfig_1}
 	\end{subfigure}
 	\hfill
 	\begin{subfigure}[b]{0.32\textwidth}
@@ -123,6 +124,8 @@ Delay-and-Predict config:
 	\caption{Delay-and-Predict dereverberation performance with multichannel linear prediction order $\mathrm{p2} = L / (M-1)$, where $L$ is the FIR RIR length and $M$ is the number of channels. Figure \ref{fig:params_p2_stage1} shows the common source whitening filter used.}
 	\label{fig:params_p2_L}
 \end{figure}
+
+My subcaption is \ref{subfig:test_subfig_1}.
 
 \textbf{Comparison: p2 = [L  N60  0.75*N60  0.5*N60] / (M-1)}
 
