--- a/thesis_tex/references.bib
+++ b/thesis_tex/references.bib
@@ -519,6 +519,17 @@
 	publisher={Wiley Online Library}
 }
 
+@article{gazor2003speech,
+	title={Speech probability distribution},
+	author={Gazor, Saeed and Zhang, Wei},
+	journal={IEEE Signal Processing Letters},
+	volume={10},
+	number={7},
+	pages={204--207},
+	year={2003},
+	publisher={IEEE}
+}
+
 %%%%%%%%
 % CHAPTER 2
 %%%%%%%%
