--- a/thesis_tex/chap1.tex
+++ b/thesis_tex/chap1.tex
@@ -76,7 +76,9 @@ Where $t_d$ is the time of the direct sound, and $t_e$ is the duration after the
 
 Another common way of analyzing reverberation is using the energy decay curve (EDC), which is a metric of the amount of energy remaining in the RIR $h(n)$ at time $t$.
 
-\[\mathrm{EDC}(t)=\int_{t}^{\infty}h^2(\tau)d\tau\]
+\begin{equation}
+	\mathrm{EDC}(t)=\int_{t}^{\infty}h^2(\tau)d\tau \label{eq:edc}
+\end{equation}
 
 (figure EDC example)
 
