--- a/thesis_tex/chap4.tex
+++ b/thesis_tex/chap4.tex
@@ -1,6 +1,6 @@
 \chapter{Methods and Results}
 
-\section{Evaluation of Proposed Speech Intelligibility Prediction Method for Reverberation}
+\section{Evaluation of Proposed SI/LE Prediction Method for Reverberation}
 
 \subsection{Proposed Method}
 
@@ -16,7 +16,7 @@ For each SI predictor, the impacts of reverberation and benefit of DAP dereverbe
 
 
 
-\subsection{Analysis of RIR Databases}
+\subsection{Analysis of RIR Databases} \label{sec:rir_databases}
 
 
 
@@ -98,7 +98,7 @@ Discuss:
 
 \subsection{Evaluation of Equalization-Cancellation Front-End}
 
-\textbf{SRM}
+\subsubsection{SRM}
 
 \begin{figure}[H]
 	\includegraphics[width=0.7\textwidth]{EC_SRM_NoiseDir}
@@ -211,7 +211,7 @@ Discuss:
 
 - SNR = 0 dB: SI is already saturated, so only evaluating impact of reverb (essentially SNR = infinity)
 
-\textbf{Does EC capture any of the benefits of early reflections?}
+\subsubsection{PE: Does EC capture any of the benefits of early reflections?}
 
 
 \begin{figure}[H]
