--- a/thesis_tex/chap5.tex
+++ b/thesis_tex/chap5.tex
@@ -10,7 +10,7 @@ Alternate minimization norm (not MSE, maybe something better suited perceptually
 
 Multi-Step/Delayed Linear Prediction to avoid cancellation of early reflections (and minimize overwhitening distortions)
 
-Adaptive/STFT/Subband implementations (reduced complexity and better tracking at cost of worse convergence, maybe not big of a hit within the context of how much were actually able to acheive / including the amount of regularization im adding). What about a combination of the two?
+Adaptive/STFT/Subband implementations (reduced complexity and better tracking at cost of worse convergence, maybe not big of a hit within the context of how much were actually able to acheive / including the amount of regularization im adding). What about a combination of the two? Impact of time-varying acoustics on DAP w/ and w/out adaptation
 
 Evaluation in combination with statistical speech enhancement method.
 
