--- a/thesis_tex/references.bib
+++ b/thesis_tex/references.bib
@@ -1309,3 +1309,34 @@
 	year={2013},
 	organization={IEEE}
 }
+
+%%%%%%%%
+% Chapters 3-5
+%%%%%%%%
+
+
+@article{dietzen2023myriad,
+	title={MYRiAD: a multi-array room acoustic database},
+	author={Dietzen, Thomas and Ali, Randall and Taseska, Maja and van Waterschoot, Toon},
+	journal={EURASIP Journal on Audio, Speech, and Music Processing},
+	volume={2023},
+	number={1},
+	pages={17},
+	year={2023},
+	publisher={Springer}
+}
+
+@article{garofolo1993timit,
+	title={TIMIT acoustic-phonetic continuous speech corpus},
+	author={Garofolo, John S and Lamel, Lori F and Fisher, William M and Pallett, David S and Dahlgren, Nancy L and Zue, Victor and Fiscus, Jonathan G},
+	journal={(No Title)},
+	year={1993},
+	publisher={Linguistic data consortium}
+}
+
+@book{oppenheim1999discrete,
+	title={Discrete-time signal processing},
+	author={Oppenheim, Alan V},
+	year={1999},
+	publisher={Pearson Education India}
+}
